--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "url": "${workspaceFolder}/introducao-javascript-inicial/introducao-javascript/index.html",
+            // "webRoot": "${workspaceFolder}/JavaScript_Alura/introducao-javascript-inicial/introducao-javascript/index.html"
         }
     ]
 }
